--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -4,8 +4,8 @@ backend:
 
 publish_mode: editorial_workflow
 
-media_folder: "arc/assets" 
-public_folder: "/images/uploads"
+media_folder: "src/assets" 
+public_folder: "/assets"
 
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
@@ -14,9 +14,7 @@ collections:
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
-      - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "pubDate", widget: "datetime"}
       - {label: "Featured Image", name: "heroImage", widget: "image"}
-      - {label: "Rating (scale of 1-5)", name: "rating", widget: "number"}
       - {label: "Body", name: "body", widget: "markdown"}
