--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -18,3 +18,4 @@ collections:
       - {label: "Publish Date", name: "pubDate", widget: "datetime"}
       - {label: "Featured Image", name: "heroImage", widget: "image"}
       - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Description", name: "description", widget: "string"}
