--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -5,7 +5,7 @@ backend:
 publish_mode: editorial_workflow
 
 media_folder: "src/assets" 
-public_folder: "/assets"
+public_folder: "src/assets"
 
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
