update asset folder

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -4,8 +4,8 @@ backend:
 
 publish_mode: editorial_workflow
 
-media_folder: "src/assets" 
-public_folder: "src/assets"
+media_folder: "public/assets" 
+public_folder: "/assets"
 
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
