--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -19,3 +19,4 @@ collections:
       - {label: "Featured Image", name: "heroImage", widget: "image"}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Description", name: "description", widget: "string"}
+      - {label: "Canonical URL", name: "canonical_url", widget: "string"}
